# libsio

./: .gitignore  CMakeLists.txt  README.md
include/sio/: event_thread.h  opengl.h  socket.h  window.h
include/sio/concepts/: New Text Document.txt
include/sio/window/: scancode.h  scancode.inl
src/event_thread/: event_thread.cpp  event_thread.h  event_threadf.cpp
src/opengl/: opengl.h
src/opengl/sdl2/: opengl.cpp  opengl.h
src/opengl/win32/: opengl.cpp  opengl.h
src/socket/: socket.cpp  socket.h
src/socket/win32/: socket.cpp  socket.h
src/window/: window.cpp  window.h
src/window/sdl2/: window.cpp  window.h
src/window/win32/: window.cpp  window.h
tests/: CMakeLists.txt  chat_client.cpp  chat_server.cpp  event_thread.cpp  window.cpp
